Fixed Z-index on flats index

--- a/app/assets/stylesheets/components/carousel.scss
+++ b/app/assets/stylesheets/components/carousel.scss
@@ -1,5 +1,6 @@
 .swiper-container {
   border-radius: 14px;
+  z-index: 0 !important;
   .swiper-pagination-bullet {
     background: $white !important;
     opacity: 0.6;
